# server-example

./: .env  .gitignore  .gitmodules  README.md  config.dev.yaml  config.yaml  config_env.yaml  environment.yaml  logging_pro.ini  package.json  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  server_main.spec
common/utils/: dir_manager.py
docs/: todo.md
help/docs/: dev.md
source/config/: logging.ini
source/db/: base copy.db  base.db  base11.db
source/generate/codebiu/: controller.sh  dao.sh  do.sh  service.sh
source/html/: index.html
source/prompt/: code.json  mark.md  生成面向AI编程助手的代码功能请求Prompt.json  通用_AI功能请求模板.json
src/: server_main.py
src/config/: __init__.py  ai.py  db copy.py  db.py  fastapi_config.py  index.py  log.py  path.py  server.py
src/controller/: __init__.py  dict.py  index.py  role_permissions.py  server_state.py  test0.py  token.py  user.py  utils.py
src/controller/rbac/: user.py
src/controller/rdbc/: token.py  user.py
src/controller/web_io/: audio.py
src/controller/ws/: test.py
src/dao/: dict.py  index.py  user.py
src/do/: dict.py  token.py  user.py  work.py  workState.py
src/module_blog/contorller.py/: article.py
src/module_blog/controller/: __init__.py  article.py
src/module_blog/dao/: article.py
src/module_blog/do/: article.py
src/module_blog/service/: article.py
src/service/: dict.py  file.py  fileService.py  index.py  token.py  user.py
src/utils/: code_generate.py
temp/db/: data.db
temp/log/: error_2025-03-26.log.2025-03-26
tests/: README.md  run_tests.py
tests/utils/: test.py
(+287 files in other folders)
