[project]
name = "server-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# uv export --format=requirements.txt --no-hashes --no-annotate --no-header > requirements.txt
dependencies = [
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.24",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.21",
    "pyaml>=25.5.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
